# TaskManager

./: CMakeLists.txt  Color.h  Control.cpp  Control.h  Date.cpp  Date.h  GUIDate.cpp  GUIDate.h  GUIMoveTask.cpp  GUIMoveTask.h  GUIRemoveTask.cpp  GUIRemoveTask.h  GUITask.cpp  GUITask.h  GUITaskManager.cpp  GUITaskManager.h  ListView.cpp  ListView.h  Percent.cpp  Percent.h  README.md  Tag.h  Task.cpp  Task.h  TaskList.cpp  TaskList.h  main.cpp  main.h
test/: CMakeLists.txt  DateTest.cpp  PercentTest.cpp  RunAllTests.cpp  TaskListTest.cpp  TaskTest.cpp
